--- a/src/app/user/mytools/mytools.component.scss
+++ b/src/app/user/mytools/mytools.component.scss
@@ -1,3 +1,5 @@
+@use '@angular/material' as mat;
+
 .container {
   display: flex;
   flex-grow: 1;
@@ -81,6 +83,7 @@ h2 {
 .form-row {
   display: flex;
   align-items: center;
+  justify-content: center;
   margin-top: 0.5rem;
 }
 
@@ -110,6 +113,34 @@ input, textarea {
   font-size: 1rem;
 }
 
+.outline {
+  flex-grow: 1;
+}
+
+.form-row .wide {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  font-size: 1.4rem;
+  color: #333;
+
+  .field {
+    @include mat.form-field-density(-5);
+
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+
+    input {
+      flex: 1 1;
+    }
+    .icon {
+      flex: 0 1;
+    }
+  }
+}
+
 .preview {
   display: flex;
   justify-content: center;
@@ -124,8 +155,7 @@ input, textarea {
 }
 
 button {
-  margin-top: 1.5rem;
-  width: 100%;
+  width: auto;
   padding: 0.75rem;
   background-color: #0078d4;
   color: white;
@@ -133,6 +163,10 @@ button {
   border-radius: 6px;
   font-size: 1rem;
   cursor: pointer;
+}
+
+.bottom-of-page {
+  margin-top: 1.5rem;
 }
 
 button:disabled {
