--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -37,6 +37,13 @@ $light-gray: #ecf0f1;
                 align-items: center;
                 padding: 8px 4px;
                 gap: 8px;
+
+                input {
+                    width: 100%;
+                    padding: 0.5rem;
+                    border: 1px solid $primary-color;
+                    border-radius: 4px;
+                }
             }
             
             .card-dropdown {
@@ -58,13 +65,6 @@ $light-gray: #ecf0f1;
             
             .card-button:hover {
                 background-color: #357ABD;
-            }
-
-
-            input {
-                padding: 0.5rem;
-                border: 1px solid $primary-color;
-                border-radius: 4px;
             }
         }
     }
