--- a/src/app/user/friends/managefriends.component.scss
+++ b/src/app/user/friends/managefriends.component.scss
@@ -12,7 +12,7 @@
   box-sizing: border-box;
 }
 
-.neighbor-header {
+.header {
   background-color: #f0f4ff;
   padding: 1rem;
   border-radius: 8px;
@@ -23,11 +23,36 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}
 
-.neighbor-header h2 {
-  font-size: 1.4rem;
-  color: #333;
+  h2 {
+    font-size: 1.4rem;
+    color: #333;
+  }
+
+  .searchbox {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .searchbox > div {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin-bottom: 10px;
+
+    div {
+      display: flex;
+      flex-grow: 1;
+      flex-direction: column;
+      align-items: center;
+      padding-right: 20px;
+
+      input {
+        width: 100%;
+        box-sizing: border-box;
+      }
+    }
+  }
 }
 
 .left-section {
